metadata/SummerGarden/objects/Variety__c.object
<CustomObject>
    <description>The variety of plant available</description>
    <fields>
        <fullName>Regular_watering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the variety of plant require regular watering (eg once per week)</description>
        <inlineHelpText>Does the variety of plant require regular watering (eg once per week)</inlineHelpText>
        <label>Regular watering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <description>The season in which a variety of plant should be planted for best results</description>
        <inlineHelpText>The season in which a variety of plant should be planted for best results</inlineHelpText>
        <label>Season</label>
        <picklist>
            <picklistValues>
                <fullName>Spring</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autumn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Varieties of plant to be grown</description>
        <inlineHelpText>Varieties of plant to be grown</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Flower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Root vegetable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fertiliser__c</fullName>
        <description>Type of fertiliser used to best feed the plant variety</description>
        <inlineHelpText>Type of fertiliser used to best feed the plant variety</inlineHelpText>
        <label>fertiliser</label>
        <picklist>
            <picklistValues>
                <fullName>Compost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High phosphate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minerals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Variety</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Variety</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Varieties</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>